--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.datasource.password=ggaswwcG1
 spring.datasource.url=jdbc:postgresql://localhost:15432/postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
+# ??mvc????springboot2.7.1???swagger3????????????Springboot???????
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
 
 
